* Mon Jan 21 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0
- Generated a REFERENCE.md
- Set the 'min_id' settings across the board to '1' to match the sssd defaults
  since they really have nothing to do with the target system's relationship
  with a centralized authentication service.
- Update the sssd::provider::ldap::ldap_access_order parameter to support the
  ppolicy related options that were added in sssd 1.14.0
  - ppolicy
  - pwd_expire_policy_reject
  - pwd_expire_policy_warn
  - pwd_expire_policy_renew

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.3-0
- Changed $sssd::install::package_ensure from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Tue Sep 18 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.3-0
- Added OracleLinux to operating system check for 128 bit cipher
  work-around

* Tue Aug 28 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
- Fixed a bug in which the ldap_account_expire_policy setting
  for the LDAP provider could not be configured to use the system
  default. Now, when sssd::provider::ldap::ldap_account_expire_policy
  is set to '', that configuration parameter will not be written
  to the sssd configuration file. This allows the system default to
  be applied.
- Fixed a bug in which any boolean setting for the LDAP provider
  configuration could not be configured to be 'false'.
- Fixed bugs in which sssd::provider::ldap::debug_timestamps and
  sssd::provider::ldap::ldap_search_timeout were erroneously typed to
  be strings, instead of a Boolean and an Integer, respectively.
- Fixed bugs in which ad_enable_dns_sites, ad_enable_gc settings,
  dyndns_update, dyndns_update_ptr, krb5_use_enterprise_principal,
  and ldap_idmap_autorid_compat settings for the AD provider could
  not be configured to be 'false'.
- Fixed bugs in which ad_gpo_map_interactive, ad_gpo_map_remote_interactive,
  ad_gpo_map_network, ad_gpo_map_batch, ad_gpo_map_service, ad_gpo_map_permit