@@ -1,6 +1,6 @@
 {
   "name": "simp-sssd",
-  "version": "6.1.4",
+  "version": "6.1.5",
   "author": "SIMP Team",
   "summary": "Manages SSSD",
   "license": "Apache-2.0",
